<resources>
    <string name="app_name">StudentManagementSystemCL3</string>
    <string name="no_data">No Data</string>
    <string name="add_student">Add Student</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="save_student_details">Save Student Details</string>
    <string name="student_added">Student Successfully Added</string>
    <string name="student_updated">Student Successfully Updated</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="choose_option">Choose and Option...</string>
    <string name="grid_list">Grid/List</string>
    <string name="sort_by_id">Sort By Id</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="name_check">Name is compulsory</string>
    <string name="id_check">Id is compulsory</string>
    <string name="unique_id_check">Enter Unique ID only</string>
    <string name="async_task_db">Async Task DB</string>
    <string name="services_db">Services DB</string>
    <string name="intent_services_db">Intent Services DB</string>
    <string name="main_frag">Main Fragment</string>
    <string name="add_fragment">Add Student Fragment</string>
</resources>
