<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddStudentActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_roll_number"
        android:id="@+id/etId"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:id="@+id/etName"
        android:inputType="text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100"
        android:text="@string/save_student_details"
        android:id="@+id/btnSave"
        android:background="@color/colorAccent"/>

</LinearLayout>